fix image position mobile

--- a/scss/pages/_info_base.scss
+++ b/scss/pages/_info_base.scss
@@ -113,6 +113,7 @@
 		}
 		@include mixins.mediaMobile {
 			top: 130px;
+			right: -37px;
 			width: 162px;
 		}
 	}
